gitops/apps/minio/clusters/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-clusters
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
