gitops/apps/minio/clusters/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-clusters
spec:
  type: ClusterIP
  selector:
    app: minio-clusters
  ports:
    - name: api
      port: 9000
      targetPort: api
    - name: console
      port: 9001
      targetPort: console
